--- a/project.config.json
+++ b/project.config.json
@@ -20,13 +20,25 @@
 			"current": -1,
 			"list": []
 		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
 		"game": {
 			"currentL": -1,
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
-			"list": []
+			"current": 0,
+			"list": [
+				{
+					"id": 0,
+					"name": "去我的",
+					"pathName": "pages/detail/main",
+					"query": "goods_id=890",
+					"scene": null
+				}
+			]
 		}
 	}
 }
