--- a/project.config.json
+++ b/project.config.json
@@ -29,13 +29,20 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": 0,
 					"name": "去我的",
 					"pathName": "pages/search/main",
 					"query": "query=%E5%A5%B3%E8%A3%85",
+					"scene": null
+				},
+				{
+					"id": 1,
+					"name": "去详情",
+					"pathName": "pages/detail/main",
+					"query": "goods_id=738",
 					"scene": null
 				}
 			]
