--- a/project.config.json
+++ b/project.config.json
@@ -5,7 +5,8 @@
 		"es6": false,
 		"postcss": true,
 		"minified": true,
-		"newFeature": true
+		"newFeature": true,
+		"autoAudits": false
 	},
 	"miniprogramRoot": "dist/wx/",
 	"compileType": "miniprogram",
@@ -29,7 +30,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
+			"current": 2,
 			"list": [
 				{
 					"id": 0,
@@ -43,6 +44,13 @@
 					"name": "去详情",
 					"pathName": "pages/detail/main",
 					"query": "goods_id=738",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "去购物车",
+					"pathName": "pages/cart/main",
+					"query": "",
 					"scene": null
 				}
 			]
